# sinterpy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: checkpoint.ipynb
src/sinterpy/: __init__.py  constants.py  losses.py  objective.py  operators.py  utils.py
tests/: __init__.py  test_checkpoint_example.py  test_losses.py  test_objective.py  test_operators.py  test_utils.py
