[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sinterpy"
version = "0.0.0"
description = "Toolkit for numerical optimization/inversion and linear operators"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [{ name = "Korchuganov V.D." }]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
